fix willTransform and fixed position contradiction. http://stackoverflow.com/questions/2637058/positions-fixed-doesnt-work-when-using-webkit-transform

--- a/client/modules/layout/components/HeaderCenter/components/MenuButton/style.less
+++ b/client/modules/layout/components/HeaderCenter/components/MenuButton/style.less
@@ -1,4 +1,4 @@
-@color: #7b7b7b;
+@color: #a1a5d2;
 
 .navTrigger {
   cursor: pointer;
