--- a/client/modules/layout/slideout.css
+++ b/client/modules/layout/slideout.css
@@ -14,7 +14,7 @@
 .slideout-panel {
   position: relative;
   z-index: 1;
-  will-change: transform;
+  /*will-change: transform;*/
 }
 
 .slideout-open,
